fixing alignment on comments on selected post page

--- a/public/css/dashboard/dashboardPostPage.css
+++ b/public/css/dashboard/dashboardPostPage.css
@@ -93,8 +93,23 @@
 
 	/* Comments  */
 
+	.post-page .container-sub {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
+		flex-wrap: wrap;
+	}
+
 	.post-page-post-comment {
-		width: 50%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: flex-start;
+		width: 45%;
+		min-height: 250px;
+		max-height: 270px;
+		margin: 0.5rem;
 	}
 
 	.post-page-post-comment hr {
